# axidev-io-python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/: axidev_io_module.c
scripts/: sync_upstream.py
src/axidev_io/: __init__.py  _api.py  _constants.py  _errors.py  _native.pyi
